<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/white"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iLogoProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/iconProduct"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:maxWidth="150dp"
            android:maxHeight="150dp"

            tools:src="@mipmap/ic_launcher"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/tvCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/Aqua"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@id/tvCardPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/nameTitle"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:maxHeight="60dp"
                android:maxWidth="200dp"
                app:layout_constraintBottom_toTopOf="@id/tvCardPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxHeight="60dp"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:padding="16dp"
            android:text="@string/descriptionProduct"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iLogoProduct" />

        <androidx.cardview.widget.CardView
            android:id="@+id/tvCardPrice"
            android:layout_width="110dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/MediumSeaGreen"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardTitle">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/textPrice"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/tvDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>